--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "font-awesome": "^4.7.0",
     "ngx-markdown": "^12.0.1",
     "ngx-md": "^8.1.6",
     "rxjs": "~6.6.0",
